add changing themes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="save">Save</string>
     <string name="new_task">Task name</string>
     <string name="back">Back</string>
+    <string name="theme">Theme</string>
+    <string name="notifications">Notifications</string>
+    <string name="calendar">Calendar</string>
+    <string name="enable_notifications">Enable notifications for undone tasks (19:30)</string>
+    <string name="write_your_thoughts">Write your thoughts...</string>
+    <string name="mint_green">Mint green</string>
+    <string name="peach_orange">Peach orange</string>
 </resources>
