--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="write_your_thoughts">Write your thoughts...</string>
     <string name="mint_green">Mint green</string>
     <string name="peach_orange">Peach orange</string>
+    <string name="today_i_am_grateful_for">Today I am grateful for:</string>
 </resources>
